feat: cloud build and publish

--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,8 @@
+[gh-actions]
+python =
+    3.8: py38
+    3.9: py39
+
 [tox]
 isolated_build = True
 envlist = py38,py39
@@ -19,8 +24,3 @@ commands =
     ; coverage erase
     ; coverage run --include=gpx/* -m pytest -ra
     ; coverage report -m
-
-[flake8]
-max-line-length = 88
-extend-ignore = D107, E203, E501, E741, W503
-docstring-convention=google
