--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,28 +1,34 @@
-name: publish
+name: Publish Python Package
 
 on:
-    release:
-        types: [created]
+  release:
+    types: [created]
 
 jobs:
-    publish:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout sources
-              uses: actions/checkout@v2
+  publish:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v3
 
-            - name: Set up Python
-              uses: actions/setup-python@v2
-              with:
-                  python-version: "3.9"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+          cache: pip
+          cache-dependency-path: pyproject.toml
 
-            - name: Install dependencies
-              run: |
-                  make deps
+      - name: Install Flit
+        run: |
+          python -m pip install flit
 
-            - name: Publish to PyPi
-              env:
-                  FLIT_USERNAME: ${{ secrets.PYPI_USERNAME }}
-                  FLIT_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-              run: |
-                  make publish
+      - name: Install Dependencies
+        run: |
+          python -m flit install --deps production
+
+      - name: Publish to PyPI
+        env:
+          FLIT_USERNAME: __token__
+          FLIT_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+        run: |
+          python -m flit publish
