--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,35 +1,71 @@
 [build-system]
-requires = ["flit_core >=2,<4"]
+requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
-[tool.flit.metadata]
-module = "gpx"
-author = "Steven van de Graaf"
-author-email = "steven@vandegraaf.xyz"
-home-page = "https://github.com/sgraaf/PyGPX"
-requires = [
-    "lxml >= 4.6.3",
-    "python-dateutil >= 2.8.1",
-]
-requires-python = ">=3.8"
-description-file = "README.md"
+[project]
+name = "gpx"
+authors = [{name = "Steven van de Graaf", email = "steven@vandegraaf.xyz"}]
+readme = "README.md"
+license = {file = "LICENSE"}
+keywords = ["gpx", "gps", "xml"]
 classifiers = [
+    "Development Status :: 4 - Beta",
     "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
+    "Programming Language :: Python",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Typing :: Typed",
 ]
+requires-python = "~=3.7"
+dependencies = [
+    "lxml",
+    "python-dateutil",
+]
+dynamic = ["version", "description"]
 
-[tool.flit.metadata.requires-extra]
+[project.optional-dependencies]
 dev = [
-    "black >= 20.8b1",
-    "coverage >= 5.5",
-    "flake8 >= 3.9.1",
-    "flake8-bugbear >= 21.4.3",
-    "flake8-docstrings >= 1.6.0",
-    "mccabe >= 0.6.1",
-    "mypy >= 0.812",
-    "pytest >= 6.2.3",
-    "tox >= 3.23.0",
+    "black",
+    "mypy",
+    "pre-commit",
+    "ruff",
+]
+docs = [
+    "furo",
+    "myst-parser",
+    "sphinx",
+    "sphinx-autobuild",
+    "sphinx-copybutton",
+    "sphinxext-opengraph",
+]
+tests = [
+    "pytest"
 ]
 
-[tool.black]
-line-length = 88
+[project.urls]
+Documentation = "https://gpx.readthedocs.io/en/stable/"
+Changelog = "https://gpx.readthedocs.io/en/stable/changelog.html"
+"Source code" = "https://github.com/sgraaf/gpx"
+Issues = "https://github.com/sgraaf/gpx/issues"
+
+[tool.ruff]
+select = [
+    "B",
+    "C90",
+    "E",
+    "F",
+    "I",
+    "UP",
+    "RUF100",
+    "W",
+]
+ignore = ["E501"]
+src = ["src"]
+target-version = "py37"
+
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["F401"]
