--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,11 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
-build-backend = "flit_core.buildapi"
+requires = ["uv_build>=0.9.11,<0.10.0"]
+build-backend = "uv_build"
 
 [project]
 name = "gpx"
+version = "2025.1.0"
+description = "PyGPX is a Python package that brings support for reading, writing and converting GPX files."
 authors = [{name = "Steven van de Graaf", email = "steven@vandegraaf.xyz"}]
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -20,13 +22,12 @@ classifiers = [
     "Programming Language :: Python :: 3.14",
     "Typing :: Typed",
 ]
-requires-python = "~=3.10"
+requires-python = ">=3.10, <4"
 dependencies = [
     "lxml",
     "python-dateutil",
     "typing-extensions; python_version < '3.11'",
 ]
-dynamic = ["version", "description"]
 
 [project.optional-dependencies]
 dev = [
@@ -81,4 +82,7 @@ pydocstyle.convention = "google"
 ]
 "tests/conftest.py" = [
     "D401",  # non-imperative-mood (pydocstyle)
+]
+"tests/smoke_test.py" = [
+    "PLR2004",   # magic-value-comparison (Pylint)
 ]
