--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ ignore = [
     "E501",  # line-too-long (pycodestyle), handled by the formatter
     "PLC2401",  # non-ascii-name (Pylint)
     "S101",   # assert (flake8-bandit)
+    "S314",  # suspicious-xml-element-tree-usage (flake8-bandit)
     "SLF001",  # private-member-access (flake8-self)
 ]
 pydocstyle.convention = "google"
