--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "uv_build"
 [project]
 name = "gpx"
 version = "2025.1.0"
-description = "PyGPX is a Python package that brings support for reading, writing and converting GPX files."
+description = "PyGPX is a pure Python package that brings support for reading, manipulating, writing and converting GPX files."
 authors = [{name = "Steven van de Graaf", email = "steven@vandegraaf.xyz"}]
 readme = "README.md"
 license = {file = "LICENSE"}
