--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "uv_build"
 [project]
 name = "gpx"
 version = "2025.1.0"
-description = "gpx is a pure Python package that brings support for reading, manipulating, writing and converting GPX files."
+description = "gpx is a zero-dependency, pure Python package for reading, manipulating, writing and converting GPX files."
 authors = [{name = "Steven van de Graaf", email = "steven@vandegraaf.xyz"}]
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -43,7 +43,7 @@ dev = [
 ]
 
 [project.scripts]
-gpx = "gpx.cli:main"
+gpx = "gpx.cli:cli"
 
 [project.urls]
 Documentation = "https://gpx.readthedocs.io/en/stable/"
