--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,7 +47,12 @@ repos:
   - repo: https://github.com/hukkin/mdformat
     rev: 1.0.0
     hooks:
-    - id: mdformat
-      additional_dependencies:
-      - mdformat-myst
-      - mdformat-ruff
+      - id: mdformat
+        additional_dependencies:
+          - mdformat-myst
+          - mdformat-ruff
+  - repo: https://github.com/rbubley/mirrors-prettier
+    rev: v3.7.4
+    hooks:
+      - id: prettier
+        types: [yaml]
