Add "typing" dependency group with `mypy`, `pyrefly` and `ty`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,10 +37,17 @@ docs = [
 tests = [
     "pytest"
 ]
+typing = [
+    "mypy",
+    "pyrefly",
+    "ty",
+]
 dev = [
     { include-group = "docs" },
     { include-group = "tests" },
+    { include-group = "typing" },
 ]
+
 
 [project.scripts]
 gpx = "gpx.cli:cli"
