--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
     tags:
-      # Publish on any tag starting with a `v`, e.g., v0.1.0
-      - v*
+      # Test on any tag starting with the format "YYYY.N.N"
+      - "[0-9][0-9][0-9][0-9].[0-9]+.[0-9]+*"
   pull_request:
   workflow_dispatch:
 
